[tool.poetry]
name = "ClusterScheduling"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = { version = ">=0.28.0,<0.29.0", extras = ["accept-rom-license", "atari"] }
tianshou = "1.1.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
